<resources>
    <string name="app_name">সহজ ঠিকানা</string>
    <string name="login1">আপনার অ্যাকাউন্টে \nলগ ইন করুন</string>
    <string name="login2">ফোন নম্বর </string>
    <string name="login3">+88 </string>
    <string name="login4">ওটিপি পাঠান</string>
    <string name="login5">এখানে নতুন আপনি ?  \nকোন সমস্যা নেই, আমাদের স্বয়ংক্রিয় ও সুরক্ষিত সিস্টেমে আপনি শুধু ফোন নাম্বার দিয়ে এক ট্যাপে লগইন করতে পারবেন</string>
    <string name="login6">ফোন নম্বর (01*********)</string>
    <string name="recover_heading">স্বাগতম আপনাকে</string>
    <string name="recover_input_text">আপনার এই ফোন নাম্বারে একটি নতুন একাউন্ট সংযুক্ত হয়েছে</string>
    <string name="recover_input_hint">অনুগ্রহ করে রিকোভারি ইমেইল সংযুক্ত করুন</string>
    <string name="recover_info">আপনার ফোন নাম্বার দিয়ে সর্বদা আপনি আমাদের সাথে যুক্ত থাকবেন। আপনার একাউন্টের নিরাপত্তাকে আরো একধাপ বৃদ্ধির জন্য এই ইমেইলটি প্রয়োজন।  পরবর্তীতে আপনি চাইলে ইমেইল আপডেট করতে পারবেন।</string>
    <string name="recover_btn">সম্পন্ন করুন</string>
    <string name="header_name">সহজ </string>
    <string name="header_name_next"> ঠিকানা</string>
    <string name="version">বাসা কই Version 1.0.1</string>
    <string name="profile1">লগ আউট</string>
    <string name="profile2">আপনার রিকোভারি ইমেইল</string>
    <string name="profile3">আপনার ব্যক্তিগত তথ্য</string>
    <string name="profile4">লগ আউট</string>
    <string name="profile5">আপডেট করুন</string>
    <string name="profile6">পরিবর্তন সম্পন্ন হয়েছে</string>
    <string name="profile7">আপনার ফোন নম্বর</string>
    <string name="home1">আপনার ঠিকানা ডিজিটাল করুন</string>
    <string name="informationPage1"> বাড়ি / সম্পত্তি / কর্মস্থলের নাম </string>
    <string name="informationPage2"> ফ্ল্যাট নং / বিল্ডিং নং </string>
    <string name="informationPage3"> কলোনি / রোড নং / এলাকা</string>
    <string name="informationPageHead">আপনার বাসার তথ্য দিন</string>
    <string name="informationPageCategory">আপনার বাসার তথ্য দিন</string>
    <string name="informationPageAudioHead">অডিও ইনপুট করুন</string>
    <string name="informationPageAudioHint">একটি গুরুত্বপূর্ণ জায়গা যেখানে দিক পরিবর্তন করতে হবে</string>
    <string name="geoInfo">আপনার জিও লোকেশন কোড তৈরির প্রথম ধাপ সম্পন্ন হচ্ছে।</string>
    <string name="geoInfoNext">আপনার জিও লোকেশন কোড তৈরির দ্বিতীয় ধাপ সম্পন্ন হচ্ছে।</string>
    <string name="geoInfoLast">আপনার জিও লোকেশন কোড তৈরির সর্বশেষ ধাপ সম্পন্ন হচ্ছে।</string>
    <string name="imagePageHeading">আরো সহজে আপনার বাসা খুঁজে পেতে চাইলে,  ছবিও সংযুক্ত করতে পারেন </string>
    <string name="imageSkip">দরকার নেই এখন</string>
    <string name="voicePageBtn">রেকর্ড শুরু করুন</string>
    <string name="commonCase">একটি সহজ নাম দিন </string>
    <string name="GeoLocationList">আপনার সকল সহজ ঠিকানা এখানে</string>
</resources>