<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".informationAttach">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapebar">
        <RelativeLayout
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="5sp">
            <TextView
                android:id="@+id/header_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/header_name"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/header_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="4dp"
                android:text="@string/header_name_next"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_back_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        app:srcCompat="@drawable/back"
        app:fabSize="mini"
        />

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:id="@+id/i_progress_image"
        android:background="@drawable/basha_koi"
        android:layout_below="@+id/head"
        android:layout_marginTop="10sp"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/i_progress_image"
        android:layout_marginLeft="60sp"
        android:layout_marginRight="65sp"
        android:layout_marginTop="10sp"
        android:text="@string/geoInfo"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/IProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="45sp"
        android:max="100"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IProgressBar"
        android:id="@+id/middleContent">

        <TextView
            android:id="@+id/info_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="25sp"
            android:text="@string/informationPageHead"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_head"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="15sp"
            android:hint="@string/informationPage1"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/location_house"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_name"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="15sp"
            android:hint="@string/informationPage2"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/location_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_house"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:layout_marginTop="15sp"
            android:hint="@string/informationPage3"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/info_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_street"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="15sp"
            android:text="@string/informationPageCategory"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/info_category"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <RadioButton
                android:id="@+id/radioButtonHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="বাসা" />


            <RadioButton
                android:id="@+id/radioButtonOffice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="অফিস" />


            <RadioButton
                android:id="@+id/radioButtonOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="অন্যান্য" />

        </RadioGroup>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_add_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="পরবর্তী ধাপ"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginRight="15sp"
        android:layout_below="@+id/middleContent"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>