<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".imageAddPage">


    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapebar">
        <RelativeLayout
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="5sp">
            <TextView
                android:id="@+id/header_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/header_name"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/header_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="4dp"
                android:text="@string/header_name_next"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:id="@+id/i_progress_image"
        android:background="@drawable/basha_koi"
        android:layout_below="@+id/head"
        android:layout_marginTop="10sp"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/i_progress_image"
        android:layout_marginLeft="60sp"
        android:layout_marginRight="65sp"
        android:layout_marginTop="10sp"
        android:text="@string/geoInfoLast"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/IProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="45sp"
        android:max="100"
        android:progress="90"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal" />

    <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="25sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/imagePageHeading"
        android:textColor="@color/white"
        android:layout_below="@+id/IProgressBar" />

    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/test"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="25sp"
        android:src="@drawable/addimage"
        android:id="@+id/imageView" />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_below="@id/test"
        android:layout_marginLeft="240sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="25sp"
        android:src="@drawable/cross"
        android:visibility="gone"
        android:id="@+id/crossImage" />

    <Button
        android:id="@+id/btn_upload_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="আপলোড করুন"
        android:visibility="gone"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginRight="15sp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/skipNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:text="@string/imageSkip"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="25sp"
        android:layout_alignParentRight="true"/>

</RelativeLayout>