<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeoLocationCodeGenarate">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shapebar">
        <RelativeLayout
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="5sp">
            <TextView
                android:id="@+id/header_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/header_name"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/header_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="4dp"
                android:text="@string/header_name_next"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:id="@+id/i_progress_image"
        android:background="@drawable/basha_koi"
        android:layout_below="@+id/head"
        android:layout_marginTop="10sp"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/i_progress_image"
        android:layout_marginLeft="60sp"
        android:layout_marginRight="65sp"
        android:layout_marginTop="10sp"
        android:text="@string/geoInfoLast"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/IProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="45sp"
        android:max="100"
        android:progress="99"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="25sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text=""
        android:textColor="@color/white"
        android:layout_below="@+id/IProgressBar" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="25sp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:id="@+id/commonGeoCode"
        android:hint="@string/commonCase"
        android:layout_below="@+id/result"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/generateAgain"
        android:layout_marginTop="25sp"
        android:text="Input"
        android:visibility="gone"
        android:layout_toRightOf="@+id/commonGeoCode"
        android:layout_below="@+id/result"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/doneGoBackHome"
        android:text="হোমপেজে ফিরে যান"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/generateAgain"/>

</RelativeLayout>